--- a/demo1/ejercicio.html
+++ b/demo1/ejercicio.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Ejercicio 1</title>
+	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
 	<header>
