Comentario de apoyo
Se agregó una línea de comentario para el ejercicio

--- a/demo1/ejercicio.html
+++ b/demo1/ejercicio.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
+	<!-- ejercicio uno del taller Web-->
 	<header>
 		<h1>título principal</h1>
 		<h2>sub título</h2>
